@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1052 2003/05/26 05:58:49 paultucker Exp $
+ * $Id: ChangeLog,v 1.1053 2003/05/26 06:06:18 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-05-26 09:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * contrib/rdd_ads/ads1.c
+    * cast at 1617
 
 2003-05-26 01:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * source/pp/ppcore.c
